--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+# admin user email, password
+admin-user-email=${ADMIN_EMAIL}
+admin-user-password=${ADMIN_PASSWORD}
