--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 # admin user email, password
-admin-user-email=${ADMIN_EMAIL}
-admin-user-password=${ADMIN_PASSWORD}
+admin.user.email=${ADMIN_EMAIL}
+admin.user.password=${ADMIN_PASSWORD}
+# Jwt token
+jwt.secret.key=${JWT_KEY}
+access.token.expiration=${ACCESS_TOKEN_EXPIRATION}
+refresh.token.expiration=${REFRESH_TOKEN_EXPIRATION}
