[#27] ✨ feat : createFilePost API 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ admin.user.password=${ADMIN_PASSWORD}
 jwt.secret.key=${JWT_KEY}
 access.token.expiration=${ACCESS_TOKEN_EXPIRATION}
 refresh.token.expiration=${REFRESH_TOKEN_EXPIRATION}
+# S3
+cloud.aws.s3.bucketName=${BUCKET_NAME}
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
+cloud.aws.region.static=ap-southeast-2
+cloud.aws.region.auto=true
+cloud.aws.stack.auto=true
