[#27] ✨ feat : 카테고리별 게시물 전체 조회 / 파일 추가 및 삭제 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
 cloud.aws.region.static=ap-southeast-2
 cloud.aws.region.auto=true
 cloud.aws.stack.auto=true
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
