--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
@@ -19,7 +20,6 @@ admin.user.password=${ADMIN_PASSWORD}
 jwt.secret.key=${JWT_KEY}
 access.token.expiration=${ACCESS_TOKEN_EXPIRATION}
 refresh.token.expiration=${REFRESH_TOKEN_EXPIRATION}
-# S3
 cloud.aws.s3.bucketName=${BUCKET_NAME}
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
