🔧chore : oauth2 client, feign client,redis 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,13 @@ cloud.aws.region.auto=true
 cloud.aws.stack.auto=true
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
+# Redis
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+# Auth
+kakao.client-id.key=${KAKAO_CLIENT_ID_KEY}
+kakao.client-secret.key=${KAKAO_CLIENT_SECRET_KEY}
+kakao.redirect.login.uri=${KAKAO_REDIRECT_LOGIN_URI}
+kakao.redirect.link.uri=${KAKAO_REDIRECT_LINK_URI}
+kakao.grant-type=${KAKAO_GRANT_TYPE}
+kakao.admin.key=${KAKAO_ADMIN_KEY}
