[#146] 🩹 fix : ec2 name 수정

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           source: "build/libs/*.jar"
-          target: "/home/ec2-user/develop/"
+          target: "/home/ubuntu/develop"
 
       - name: Restart server on develop
         if: github.ref == 'refs/heads/develop'
