[#139]✨feat : 이미지의 사이즈(길이)가 너무 클 경우 일정 비율로 재조정 후 업로드

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     // amazon
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    // ImgScalr
+    implementation 'org.imgscalr:imgscalr-lib:4.2'
+
     // OAuth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
