--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,6 +32,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
+          port: 22
           source: "./build/libs/*.jar"
           target: /home/ubuntu/develop
 
