--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'  # distribution 필드 추가
+          distribution: 'temurin'
           java-version: '17'
 
       - name: Grant execute permission for Gradlew
@@ -25,18 +25,19 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Copy files via SSH to develop
-        if: github.ref == 'refs/heads/develop'
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-          port: 22
-          source: "./build/libs/*.jar"
-          target: /home/ubuntu/develop
+      - name: Build Docker image
+        run: docker build -t myapp:${{ github.sha }} .
 
-      - name: Restart server on develop
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image to Docker Hub
+        run: docker push myapp:${{ github.sha }}
+
+      - name: Deploy to EC2
         if: github.ref == 'refs/heads/develop'
         uses: appleboy/ssh-action@master
         with:
@@ -44,6 +45,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            chmod +x /home/ubuntu/*.jar
-            pkill -f 'java -jar' || true
-            nohup java -jar /home/ubuntu/develop/Mypet.jar > /dev/null 2>&1 &
+            docker pull myapp:${{ github.sha }}
+            docker stop myapp || true
+            docker rm myapp || true
+            docker run -d --name myapp -p 8080:8080 myapp:${{ github.sha }}
