[#146] dockerHub 레포 이름 부분수정

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -45,7 +45,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            docker pull myapp:${{ github.sha }}
+            docker pull minhyuk0828/mypetdb:${{ github.sha }}
             docker stop myapp || true
             docker rm myapp || true
-            docker run -d --name myapp -p 8080:8080 myapp:${{ github.sha }}
+            docker run -d --name myapp -p 8080:8080 minhyuk0828/mypetdb:${{ github.sha }}
