--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,9 +52,5 @@ jobs:
             docker stop myapp || true
             docker rm myapp || true
 
-            # Copy the .env file from GitHub Actions to EC2 instance
-            echo "Fetching .env file..."
-            scp -i ${{ secrets.KEY }} .env ubuntu@${{ secrets.HOST }}:/home/ubuntu/.env
-
-            # Run the Docker container with environment variables
+            # Run the Docker container with environment variables from the existing .env file on the EC2 instance
             docker run -d --name myapp -p 8080:8080 --env-file /home/ubuntu/.env minhyuk0828/mypetdb:${{ github.sha }}
