--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     // ImgScalr
     implementation 'org.imgscalr:imgscalr-lib:4.2'
 
+    // FFmpeg
+    implementation group: 'net.bramp.ffmpeg', name: 'ffmpeg', version: '0.7.0'
+
     // OAuth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
