[#146] 🩹 fix add-host 추가

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,4 +53,4 @@ jobs:
             docker rm myapp || true
 
             # Run the Docker container with environment variables from the existing .env file on the EC2 instance
-            docker run -d --name myapp -p 8080:8080 --env-file .env minhyuk0828/mypetdb:${{ github.sha }}
+            docker run -d --name myapp -p 8080:8080 --env-file .env --add-host host.docker.internal:host-gateway minhyuk0828/mypetdb:${{ github.sha }}
