[#146] 🩹 fix add-host 추가

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -51,6 +51,10 @@ jobs:
             # Stop and remove any existing container
             docker stop myapp || true
             docker rm myapp || true
+            
+            # Copy the .env file from GitHub Actions to EC2 instance
+            echo "Fetching .env file..."
+            scp -i ${{ secrets.KEY }} .env ubuntu@${{ secrets.HOST }}:/home/ubuntu/.env
 
             # Run the Docker container with environment variables from the existing .env file on the EC2 instance
-            docker run -d --name myapp -p 8080:8080 --env-file .env --add-host host.docker.internal:host-gateway minhyuk0828/mypetdb:${{ github.sha }}
+            docker run -d --name myapp -p 8080:8080 --env-file /home/ubuntu/.env --add-host host.docker.internal:host-gateway minhyuk0828/mypetdb:${{ github.sha }}
