🔧chore : Google 연동 관련 정보 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,13 +31,18 @@ spring.servlet.multipart.max-request-size=500MB
 # Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
-# Auth
+# Auth - KAKAO
 kakao.client-id.key=${KAKAO_CLIENT_ID_KEY}
 kakao.client-secret.key=${KAKAO_CLIENT_SECRET_KEY}
 kakao.redirect.login.uri=${KAKAO_REDIRECT_LOGIN_URI}
 kakao.redirect.link.uri=${KAKAO_REDIRECT_LINK_URI}
-kakao.grant-type=${KAKAO_GRANT_TYPE}
 kakao.admin.key=${KAKAO_ADMIN_KEY}
+# Auth - GOOGLE
+google.client-id.key=${GOOGLE_CLIENT_ID_KEY}
+google.client-secret.key=${GOOGLE_CLIENT_SECRET_KEY}
+google.redirect.login.uri=${GOOGLE_REDIRECT_LOGIN_URI}
+google.redirect.link.uri=${GOOGLE_REDIRECT_LINK_URI}
+oauth2.grant-type=${GRANT_TYPE}
 # Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
