🔧chore : signup url 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,7 @@ google.client-secret.key=${GOOGLE_CLIENT_SECRET_KEY}
 google.redirect.login.uri=${GOOGLE_REDIRECT_LOGIN_URI}
 google.redirect.link.uri=${GOOGLE_REDIRECT_LINK_URI}
 oauth2.grant-type=${GRANT_TYPE}
+signup.url=${SIGNUP_URL}
 # Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
