--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -45,16 +45,55 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
+            # Install Docker Compose if not already installed
+            if ! command -v docker-compose &> /dev/null
+            then
+                sudo curl -L "https://github.com/docker/compose/releases/download/2.23.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+                sudo chmod +x /usr/local/bin/docker-compose
+            fi
+
             # Pull the Docker image
             docker pull minhyuk0828/mypetdb:${{ github.sha }}
 
-            # Stop and remove any existing container
-            docker stop myapp || true
-            docker rm myapp || true
-            
-            # Copy the .env file from GitHub Actions to EC2 instance
-            echo "Fetching .env file..."
-            scp -i ${{ secrets.KEY }} .env ubuntu@${{ secrets.HOST }}:/home/ubuntu/.env
+            # Stop and remove any existing containers
+            docker-compose down || true
 
-            # Run the Docker container with environment variables from the existing .env file on the EC2 instance
-            docker run -d --name myapp -p 8080:8080 --env-file /home/ubuntu/.env --add-host host.docker.internal:host-gateway minhyuk0828/mypetdb:${{ github.sha }}
+            # Create docker-compose.yml file
+            cat << EOF > docker-compose.yml
+            version: '3.8'
+            services:
+              app:
+                image: minhyuk0828/mypetdb:${{ github.sha }}
+                ports:
+                  - "8080:8080"
+                environment:
+                  - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/mypet
+                  - SPRING_DATASOURCE_USERNAME=${{ secrets.DB_USERNAME }}
+                  - SPRING_DATASOURCE_PASSWORD=${{ secrets.DB_PASSWORD }}
+                  - SPRING_REDIS_HOST=redis
+                depends_on:
+                  - mysql
+                  - redis
+            mysql:
+              platform: linux/x86_64
+              image: mysql:8.0               
+              ports:
+                - "3307:3306"
+               environment:
+                - MYSQL_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
+                - MYSQL_DATABASE=mypet
+              volumes:
+                - mysql_data:/var/lib/mysql
+            redis:
+              image: redis:7.2
+              ports:
+                - "6379:6379"
+              volumes:
+                - redis_data:/data
+            volumes:
+              mysql_data:
+              redis_data:
+            EOF
+            
+            # Run Docker Compose
+            docker-compose up -d
