--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -45,18 +45,25 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            # Install Docker Compose if not already installed
-            if ! command -v docker-compose &> /dev/null
-            then
-                sudo curl -L "https://github.com/docker/compose/releases/download/2.23.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-                sudo chmod +x /usr/local/bin/docker-compose
-            fi
-
+            # Remove existing Docker Compose installation
+            sudo rm -f /usr/local/bin/docker-compose
+            
+            # Install latest Docker Compose
+            DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
+            mkdir -p $DOCKER_CONFIG/cli-plugins
+            curl -SL https://github.com/docker/compose/releases/download/v2.23.3/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
+            chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
+            
+            # Verify installation
+            docker compose version
+            
+            # Rest of your deployment script...
             # Pull the Docker image
             docker pull minhyuk0828/mypetdb:${{ github.sha }}
-
-            # Stop and remove any existing containers
-            docker-compose down || true
+            
+            # Copy the .env file from GitHub Actions to EC2 instance
+            echo "Fetching .env file..."
+            scp -i ${{ secrets.KEY }} .env ubuntu@${{ secrets.HOST }}:/home/ubuntu/.env
 
             # Create docker-compose.yml file
             cat << EOF > docker-compose.yml
