--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -76,6 +76,8 @@ jobs:
                 depends_on:
                   - mysql
                   - redis
+                networks:
+                  - mypet_network
               mysql:
                 platform: linux/x86_64
                 image: mysql:8.0
@@ -84,12 +86,16 @@ jobs:
                 env_file: /home/ubuntu/.env
                 volumes:
                   - mysql_data:/var/lib/mysql
+                networks:
+                  - mypet_network
               redis:
                 image: redis:7.2
                 ports:
                   - "6379:6379"
                 volumes:
                   - redis_data:/data
+                networks:
+                  - mypet_network
             volumes:
               mysql_data:
               redis_data:
