--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -85,6 +85,11 @@ jobs:
               mysql:
                 platform: linux/x86_64
                 image: mysql:8.0
+                environment:
+                  - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+                  - MYSQL_ROOT_USER=${DB_USERNAME}
+                  - MYSQL_PASSWORD=${DB_PASSWORD}
+                  - MYSQL_DATABASE=mypet
                 ports:
                   - "3307:3306"
                 env_file: /home/ubuntu/.env
