--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -80,32 +80,32 @@ jobs:
                 depends_on:
                   mysql:
                     condition: service_healthy
-                  - redis
+                    redis: service_healthy
                 networks:
                   - mypetdb_network
-              mysql:
-                platform: linux/x86_64
-                image: mysql:8.0
-                environment:
-                  - MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }}
-                  - MYSQL_ROOT_USER=${{ secrets.DB_USERNAME }}
-                  - MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }}
-                  - MYSQL_DATABASE=mypet
-                ports:
-                  - "3307:3306"
-                env_file: /home/ubuntu/.env
-                volumes:
-                  - mysql_data:/var/lib/mysql
-                networks:
-                  - mypetdb_network
-              redis:
-                image: redis:7.2
-                ports:
-                  - "6379:6379"
-                volumes:
-                  - redis_data:/data
-                networks:
-                  - mypetdb_network
+            mysql:
+              platform: linux/x86_64
+              image: mysql:8.0
+              environment:
+                - MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }}
+                - MYSQL_ROOT_USER=${{ secrets.DB_USERNAME }}
+                - MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }}
+                - MYSQL_DATABASE=mypet
+              ports:
+                - "3307:3306"
+              env_file: /home/ubuntu/.env
+              volumes:
+                - mysql_data:/var/lib/mysql
+              networks:
+                - mypetdb_network
+            redis:
+              image: redis:7.2
+              ports:
+                - "6379:6379"
+              volumes:
+                - redis_data:/data
+              networks:
+                - mypetdb_network
             volumes:
               mysql_data:
               redis_data:
