--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -84,7 +84,8 @@ jobs:
                 platform: linux/x86_64
                 image: mysql:8.0
                 environment:
-                  - MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }}
+                  - MYSQL_USER=${{ secrets.DB_USERNAME }}
+                  - MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }}
                   - MYSQL_DATABASE=mypet
                 ports:
                   - "3307:3306"
