--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -104,8 +104,8 @@ jobs:
                 ports:
                   - "6379:6379"
 
-                container_name:${{ secret.REDIS_NAME }}
-                hostname :${{ secret.REDIS_HOST_NAME }}
+                container_name:${{ secrets.REDIS_NAME }}
+                hostname :${{ secrets.REDIS_HOST_NAME }}
                 volumes:
                   - redis_data:/data
                 networks:
